<resources>
    <string name="app_name" translatable="false">CaffStore</string>

    <string name="not_yet_registered">Not yet registered? Click here</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="user_name">User name</string>
    <string name="login">Login</string>
    <string name="register_fragment_label" translatable="false">RegisterFragment</string>
    <string name="login_fragment_label" translatable="false">LoginFragment</string>
    <string name="registration">Registration</string>
    <string name="email_address">Email address</string>
    <string name="register">Register</string>
    <string name="already_registered">Already registered? Log in</string>
    <string name="confirm">Confirm</string>
    <string name="error_empty_input">Field cannot be empty</string>
    <string name="length_value" translatable="false">%1$d:%2$02d.%3$03d</string>
    <string name="creator">Creator</string>
    <string name="date_of_creation">Date of Creation</string>
    <string name="length">Length</string>
    <string name="comments">Comments</string>
    <string name="add_comment">Add comment</string>
    <string name="download">Download</string>
    <string name="thumbnail_image">Thumbnail</string>
    <string name="not_found">No result found</string>
    <string name="sign_out">Sign out</string>
    <string name="search">Search</string>
    <string name="upload">Upload CAFF</string>
    <string name="results">Number of result: %1$d</string>
    <string name="title">Title</string>
    <string name="no_comment">No comments yet! Add one</string>
    <string name="comment_added">Comment successfully added</string>
    <string name="comment_max">Comment (max 255 character)</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="ordering">Ordering</string>
    <string name="less">Less</string>
    <string name="more">More</string>
    <string name="filter">Filter</string>
    <string name="max_caff">Name of CAFF (max 60 character)</string>
    <string name="add_name">Add name</string>
    <string name="upload_success">Caff upload successful</string>
    <string name="download_successfull">Caff download successful</string>
    <string name="open_caff">Open CAFF file</string>
    <string name="free_only">Free</string>
    <string name="already_bought">Bought</string>
    <string name="buy">Buy (%1$.2f €)</string>
    <string name="confirm_buy">\"Are you sure to buy this CAFF?</string>
    <string name="bought_success">Successful purchase</string>
    <string name="invalid_file_type">Invalid type of file</string>
    <string name="permission_title">Storage permission</string>
    <string name="permission_reason" >This application requires storage permission for the download/upload of the CAFF files</string>
    <string name="price">Price (€)</string>
    <string name="reg_success">Registration successful</string>
    <string name="back">Back</string>
    <string name="image">Image</string>
    <string name="invalid_user_name">This username does not exist</string>
    <string name="invalid_password_or_user">Incorrect username or password</string>
    <string name="network_error">Network connection error</string>
    <string name="duplicate_user_name">This username is already taken</string>
    <string name="invalid_email_address">Not valid email</string>
    <string name="delete">Delete</string>
    <string name="delete_confirm">Are you sure to delete this item?</string>
    <string name="comment_delete_conf">Comment has been successfully remove</string>
    <string name="caff_delete_conf">CAFF has been successfully deleted.</string>
    <string name="purchase_error">Unable to purchase caff image</string>
    <string name="comment_error">Unable to add comment</string>
    <string name="tooShortUsername">This username is too short.</string>
    <string name="tooShortPassword">Minimum password length is 7.</string>
    <string name="tooWeakPassword">Password should contain at least 1 capital letter, 1 number and 1 special character.</string>
    <string name="delete_error">Unable to delete CAFF</string>
    <string name="delete_comment_error">Unable to delete comment</string>
    <string name="confirm_mismatch">Confirm must match with the password</string>
    <string name="caff_upload_error">Unable to upload caff file. Invalid format.</string>
    <string name="caff_download_error">Unable to download CAFF file</string>
</resources>