<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.StoreFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCaffs"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/dStore"
        tools:listitem="@layout/store_item"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvResults"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/results"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/dStore"
        app:layout_constraintEnd_toStartOf="@+id/ibUpload"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibUpload"
        style="@android:style/Widget.Material.ImageButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:background="#00FFFFFF"
        android:clickable="true"
        android:contentDescription="@string/upload"
        android:src="@drawable/ic_baseline_cloud_upload_24"
        app:layout_constraintEnd_toStartOf="@+id/ibSearch"
        app:layout_constraintTop_toTopOf="@+id/ibSearch" />

    <ImageButton
        android:id="@+id/ibSearch"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:background="#00FFFFFF"
        android:clickable="true"
        android:contentDescription="@string/search"
        android:src="@drawable/ic_baseline_search_24"
        app:layout_constraintEnd_toStartOf="@+id/ibSignOut"
        app:layout_constraintTop_toTopOf="@+id/ibSignOut" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="ibSearch, ibUpload, tvResults"
        tools:layout_editor_absoluteX="411dp"
        tools:layout_editor_absoluteY="40dp" />

    <View
        android:id="@+id/dStore"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier" />

    <ImageButton
        android:id="@+id/ibSignOut"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#00FFFFFF"
        android:clickable="true"
        android:contentDescription="@string/sign_out"
        android:scaleType="center"
        android:src="@drawable/ic_exit_to_app_24px"
        app:layout_constraintBottom_toBottomOf="@+id/tvResults"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvResults" />

</androidx.constraintlayout.widget.ConstraintLayout>